--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,13 +7,16 @@
               android:paddingRight="@dimen/activity_horizontal_margin"
               android:paddingTop="@dimen/activity_vertical_margin"
               android:paddingBottom="@dimen/activity_vertical_margin"
+              android:clickable="false"
+              android:focusable="false"
+              android:focusableInTouchMode="false"
               tools:context=".Report">
 
     <fragment
-            android:id="@+id/entries_list_fragment"
+            android:id="@+id/fragment_entries_list"
             android:name="edio.pemdroid.fragment.ExpenseListFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:layout_weight="1"/>
 
     <fragment
