--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="activity_vertical_margin">0dp</dimen>
     <dimen name="content_horizontal_padding">16dp</dimen>
     <dimen name="content_vertical_padding">8dp</dimen>
+    <dimen name="button_add_expense_size">28dp</dimen>
 </resources>
